added footer, alphabetized broiders, some styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <h1 class="site-title"><a href="https://maxbittker.github.io/broider/">broider</a>-gallery</h1>
   <section class="gallery">
 <div class="gallery-item floral-cross">
 <details>
@@ -20,6 +21,7 @@
   border-style: solid;
 }
 </pre>
+<p>designed by <a href="https://todrobbins.com">Tod Robbins</a></p>
 </details>
 </div>
 
@@ -33,11 +35,12 @@
   border-style: solid;
 }
 </pre>
+<p>designed by <a href="https://todrobbins.com">Tod Robbins</a></p>
 </details>
 </div>
 
 <div class="gallery-item cross-equals">
-<details onclick="Math.floor(Math.random()*16777215).toString(16);">
+<details>
 <summary>.cross-equals</summary>
 <pre>
 {
@@ -46,6 +49,7 @@
   border-style: solid;
 }
 </pre>
+<p>designed by <a href="https://todrobbins.com">Tod Robbins</a></p>
 </details>
 </div>
 
@@ -59,9 +63,15 @@
   border-style: solid;
 }
 </pre>
+<p>designed by <a href="https://todrobbins.com">Tod Robbins</a></p>
 </details>
 </div>
 
 </section>
+
+<footer>
+<p><a href="https://github.com/todrobbins/broider-gallery#contributing">Contribute to the broider-gallery ⇢</a></p>
+<p>a wee project by <a href="https://todrobbins.com">Tod Robbins</a></p>
+</footer>
 </body>
 </html>
