added license and moved contributor link to header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
   <h1 class="site-title"><a href="https://maxbittker.github.io/broider/">broider</a>-gallery</h1>
+
+  <p><a href="https://github.com/todrobbins/broider-gallery#contributing">Add your own broider ⇢</a></p>
   <section class="gallery">
 
 <div class="gallery-item arrow-flow">
@@ -267,7 +269,7 @@
 </section>
 
 <footer>
-<p><a href="https://github.com/todrobbins/broider-gallery#contributing">Contribute to the broider-gallery ⇢</a></p>
+<p><a href="https://github.com/todrobbins/broider-gallery/blob/master/LICENSE.md">This is free and unencumbered software released into the public domain.</a></p>
 <p>a wee project by <a href="https://todrobbins.com">Tod Robbins</a></p>
 </footer>
 </body>
